k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-list-app-service
spec:
  type: LoadBalancer
  selector:
    app: todo-list-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
